--- a/multi-stage-multi-agent/Jenkinsfile
+++ b/multi-stage-multi-agent/Jenkinsfile
@@ -7,6 +7,10 @@ pipeline {
       }
       steps {
         sh 'mvn --version'
+        sh '''javac HelloWorld.java
+java HelloWorld
+
+'''
       }
     }
     stage('Front-end') {
